Remove mappings where placeholders mismatch, add mappings where key and value mismatched

--- a/common/src/main/resources/assets/viaversion/data/mapping-lang-1.12-1.13.json
+++ b/common/src/main/resources/assets/viaversion/data/mapping-lang-1.12-1.13.json
@@ -52,7 +52,6 @@
   "selectWorld.edit.openFolder": null,
   "selectWorld.edit.save": null,
   "selectWorld.deleteQuestion": null,
-  "selectWorld.deleteWarning": null,
   "selectWorld.deleteButton": null,
   "selectWorld.conversion": null,
   "selectWorld.newWorld": null,
@@ -214,7 +213,6 @@
   "selectServer.add": null,
   "selectServer.defaultName": null,
   "selectServer.deleteQuestion": null,
-  "selectServer.deleteWarning": null,
   "selectServer.deleteButton": null,
   "selectServer.refresh": null,
   "selectServer.hiddenAddress": null,
@@ -293,7 +291,6 @@
   "demo.day.4": null,
   "demo.day.5": null,
   "demo.day.warning": null,
-  "demo.day.6": null,
   "demo.reminder": null,
   "demo.remainingTime": null,
   "demo.demoExpired": null,
@@ -384,7 +381,6 @@
   "options.clouds.fast": null,
   "options.guiScale": null,
   "options.guiScale.auto": null,
-  "options.guiScale.normal": "options.difficulty.normal",
   "options.renderClouds": null,
   "options.particles": null,
   "options.particles.all": null,
@@ -533,6 +529,12 @@
   "tile.dirt.coarse.name": "block.minecraft.coarse_dirt",
   "tile.dirt.podzol.name": "block.minecraft.podzol",
   "tile.stonebrick.name": "block.minecraft.cobblestone",
+  "tile.wood.oak.name": "block.minecraft.oak_planks",
+  "tile.wood.spruce.name": "block.minecraft.spruce_planks",
+  "tile.wood.birch.name": "block.minecraft.birch_planks",
+  "tile.wood.jungle.name": "block.minecraft.jungle_planks",
+  "tile.wood.acacia.name": "block.minecraft.acacia_planks",
+  "tile.wood.big_oak.name": "block.minecraft.dark_oak_planks",
   "tile.sapling.oak.name": "block.minecraft.oak_sapling",
   "tile.sapling.spruce.name": "block.minecraft.spruce_sapling",
   "tile.sapling.birch.name": "block.minecraft.birch_sapling",
@@ -621,6 +623,7 @@
   "tile.flower2.oxeyeDaisy.name": "block.minecraft.oxeye_daisy",
   "tile.doublePlant.sunflower.name": "block.minecraft.sunflower",
   "tile.doublePlant.syringa.name": "block.minecraft.lilac",
+  "tile.doublePlant.grass.name": "block.minecraft.tall_grass",
   "tile.doublePlant.fern.name": "block.minecraft.large_fern",
   "tile.doublePlant.rose.name": "block.minecraft.rose_bush",
   "tile.doublePlant.paeonia.name": "block.minecraft.peony",
@@ -630,15 +633,31 @@
   "tile.stoneSlab.stone.name": "block.minecraft.stone_slab",
   "tile.stoneSlab.sand.name": "block.minecraft.sandstone_slab",
   "tile.stoneSlab.cobble.name": "block.minecraft.cobblestone_slab",
+  "tile.stoneSlab.brick.name": "block.minecraft.brick_slab",
+  "tile.stoneSlab.smoothStoneBrick.name": "block.minecraft.stone_brick_slab",
   "tile.stoneSlab.netherBrick.name": "block.minecraft.nether_brick_slab",
   "tile.stoneSlab.quartz.name": "block.minecraft.quartz_slab",
   "tile.stoneSlab2.red_sandstone.name": "block.minecraft.red_sandstone_slab",
+  "tile.woodSlab.oak.name": "block.minecraft.oak_slab",
+  "tile.woodSlab.spruce.name": "block.minecraft.spruce_slab",
+  "tile.woodSlab.birch.name": "block.minecraft.birch_slab",
+  "tile.woodSlab.jungle.name": "block.minecraft.jungle_slab",
+  "tile.woodSlab.acacia.name": "block.minecraft.acacia_slab",
+  "tile.woodSlab.big_oak.name": "block.minecraft.dark_oak_slab",
   "tile.brick.name": "block.minecraft.bricks",
   "tile.tnt.name": "block.minecraft.tnt",
   "tile.bookshelf.name": "block.minecraft.bookshelf",
+  "tile.stoneMoss.name": "block.minecraft.mossy_cobblestone",
   "tile.obsidian.name": "block.minecraft.obsidian",
   "tile.torch.name": "block.minecraft.torch",
   "tile.fire.name": "block.minecraft.fire",
+  "tile.mobSpawner.name": "block.minecraft.spawner",
+  "tile.stairsWood.name": "block.minecraft.oak_stairs",
+  "tile.stairsWoodSpruce.name": "block.minecraft.spruce_stairs",
+  "tile.stairsWoodBirch.name": "block.minecraft.birch_stairs",
+  "tile.stairsWoodJungle.name": "block.minecraft.jungle_stairs",
+  "tile.stairsWoodAcacia.name": "block.minecraft.acacia_stairs",
+  "tile.stairsWoodDarkOak.name": "block.minecraft.dark_oak_stairs",
   "tile.chest.name": "block.minecraft.chest",
   "tile.chestTrap.name": "block.minecraft.trapped_chest",
   "tile.redstoneDust.name": "block.minecraft.redstone_wire",
@@ -646,6 +665,7 @@
   "tile.blockCoal.name": "block.minecraft.coal_block",
   "tile.blockDiamond.name": "block.minecraft.diamond_block",
   "tile.workbench.name": "block.minecraft.crafting_table",
+  "tile.crops.name": "block.minecraft.wheat",
   "tile.farmland.name": "block.minecraft.farmland",
   "tile.furnace.name": "block.minecraft.furnace",
   "tile.sign.name": "block.minecraft.sign",
@@ -659,6 +679,8 @@
   "tile.stairsRedSandStone.name": "block.minecraft.red_sandstone_stairs",
   "tile.lever.name": "block.minecraft.lever",
   "tile.pressurePlateStone.name": "block.minecraft.stone_pressure_plate",
+  "tile.weightedPlate_light.name": "block.minecraft.light_weighted_pressure_plate",
+  "tile.weightedPlate_heavy.name": "block.minecraft.heavy_weighted_pressure_plate",
   "tile.doorIron.name": "block.minecraft.iron_door",
   "tile.oreRedstone.name": "block.minecraft.redstone_ore",
   "tile.notGate.name": "block.minecraft.redstone_torch",
@@ -701,6 +723,7 @@
   "tile.clayHardenedStained.orange.name": "block.minecraft.orange_terracotta",
   "tile.clayHardenedStained.white.name": "block.minecraft.white_terracotta",
   "tile.clayHardened.name": "block.minecraft.terracotta",
+  "tile.reeds.name": "block.minecraft.sugar_cane",
   "tile.jukebox.name": "block.minecraft.jukebox",
   "tile.fence.name": "block.minecraft.oak_fence",
   "tile.spruceFence.name": "block.minecraft.spruce_fence",
@@ -720,6 +743,7 @@
   "tile.hellrock.name": "block.minecraft.netherrack",
   "tile.hellsand.name": "block.minecraft.soul_sand",
   "tile.lightgem.name": "block.minecraft.glowstone",
+  "tile.portal.name": "block.minecraft.nether_portal",
   "tile.cloth.black.name": "block.minecraft.black_wool",
   "tile.cloth.red.name": "block.minecraft.red_wool",
   "tile.cloth.green.name": "block.minecraft.green_wool",
@@ -743,6 +767,9 @@
   "tile.musicBlock.name": "block.minecraft.note_block",
   "tile.cake.name": "block.minecraft.cake",
   "tile.bed.occupied": "block.minecraft.bed.occupied",
+  "tile.bed.noSleep": "block.minecraft.bed.no_sleep",
+  "tile.bed.tooFarAway": "block.minecraft.bed.too_far_away",
+  "tile.bed.notSafe": "block.minecraft.bed.not_safe",
   "tile.bed.notValid": "block.minecraft.bed.not_valid",
   "tile.ironTrapdoor.name": "block.minecraft.iron_trapdoor",
   "tile.web.name": "block.minecraft.cobweb",
@@ -751,6 +778,12 @@
   "tile.stonebricksmooth.mossy.name": "block.minecraft.mossy_stone_bricks",
   "tile.stonebricksmooth.cracked.name": "block.minecraft.cracked_stone_bricks",
   "tile.stonebricksmooth.chiseled.name": "block.minecraft.chiseled_stone_bricks",
+  "tile.monsterStoneEgg.stone.name": "block.minecraft.infested_stone",
+  "tile.monsterStoneEgg.cobble.name": "block.minecraft.infested_cobblestone",
+  "tile.monsterStoneEgg.brick.name": "block.minecraft.infested_stone_bricks",
+  "tile.monsterStoneEgg.mossybrick.name": "block.minecraft.infested_mossy_stone_bricks",
+  "tile.monsterStoneEgg.crackedbrick.name": "block.minecraft.infested_cracked_stone_bricks",
+  "tile.monsterStoneEgg.chiseledbrick.name": "block.minecraft.infested_chiseled_stone_bricks",
   "tile.pistonBase.name": "block.minecraft.piston",
   "tile.pistonStickyBase.name": "block.minecraft.sticky_piston",
   "tile.fenceIron.name": "block.minecraft.iron_bars",
@@ -758,11 +791,12 @@
   "tile.stairsBrick.name": "block.minecraft.brick_stairs",
   "tile.stairsStoneBrickSmooth.name": "block.minecraft.stone_brick_stairs",
   "tile.vine.name": "block.minecraft.vine",
-  "tile.netherBrick.name": "item.minecraft.nether_brick",
+  "tile.netherBrick.name": "block.minecraft.nether_bricks",
   "tile.netherFence.name": "block.minecraft.nether_brick_fence",
   "tile.stairsNetherBrick.name": "block.minecraft.nether_brick_stairs",
   "tile.netherStalk.name": "block.minecraft.nether_wart",
   "tile.cauldron.name": "block.minecraft.cauldron",
+  "tile.enchantmentTable.name": "block.minecraft.enchanting_table",
   "tile.anvil.name": "block.minecraft.anvil",
   "tile.anvil.intact.name": "block.minecraft.anvil",
   "tile.whiteStone.name": "block.minecraft.end_stone",
@@ -788,11 +822,13 @@
   "tile.cobbleWall.mossy.name": "block.minecraft.mossy_cobblestone_wall",
   "tile.carrots.name": "block.minecraft.carrots",
   "tile.potatoes.name": "block.minecraft.potatoes",
+  "tile.daylightDetector.name": "block.minecraft.daylight_detector",
   "tile.netherquartz.name": "block.minecraft.nether_quartz_ore",
   "tile.hopper.name": "block.minecraft.hopper",
   "tile.quartzBlock.name": "block.minecraft.quartz_block",
   "tile.quartzBlock.default.name": "block.minecraft.quartz_block",
   "tile.quartzBlock.chiseled.name": "block.minecraft.chiseled_quartz_block",
+  "tile.quartzBlock.lines.name": "block.minecraft.quartz_pillar",
   "tile.stairsQuartz.name": "block.minecraft.quartz_stairs",
   "tile.slime.name": "block.minecraft.slime_block",
   "tile.prismarine.rough.name": "block.minecraft.prismarine",
@@ -811,6 +847,7 @@
   "tile.grassPath.name": "block.minecraft.grass_path",
   "tile.magma.name": "block.minecraft.magma_block",
   "tile.netherWartBlock.name": "block.minecraft.nether_wart_block",
+  "tile.redNetherBrick.name": "block.minecraft.red_nether_bricks",
   "tile.boneBlock.name": "block.minecraft.bone_block",
   "tile.observer.name": "block.minecraft.observer",
   "tile.shulkerBoxWhite.name": "block.minecraft.white_shulker_box",
@@ -925,15 +962,20 @@
   "item.hoeIron.name": "item.minecraft.iron_hoe",
   "item.hoeDiamond.name": "item.minecraft.diamond_hoe",
   "item.hoeGold.name": "item.minecraft.golden_hoe",
+  "item.seeds.name": "item.minecraft.wheat_seeds",
   "item.seeds_pumpkin.name": "item.minecraft.pumpkin_seeds",
   "item.seeds_melon.name": "item.minecraft.melon_seeds",
-  "item.melon.name": "block.minecraft.melon",
+  "item.melon.name": "item.minecraft.melon_slice",
   "item.wheat.name": "item.minecraft.wheat",
   "item.bread.name": "item.minecraft.bread",
   "item.helmetCloth.name": "item.minecraft.leather_helmet",
   "item.chestplateCloth.name": "item.minecraft.leather_chestplate",
   "item.leggingsCloth.name": "item.minecraft.leather_leggings",
   "item.bootsCloth.name": "item.minecraft.leather_boots",
+  "item.helmetChain.name": "item.minecraft.chainmail_helmet",
+  "item.chestplateChain.name": "item.minecraft.chainmail_chestplate",
+  "item.leggingsChain.name": "item.minecraft.chainmail_leggings",
+  "item.bootsChain.name": "item.minecraft.chainmail_boots",
   "item.helmetIron.name": "item.minecraft.iron_helmet",
   "item.chestplateIron.name": "item.minecraft.iron_chestplate",
   "item.leggingsIron.name": "item.minecraft.iron_leggings",
@@ -963,7 +1005,7 @@
   "item.painting.name": "item.minecraft.painting",
   "item.frame.name": "item.minecraft.item_frame",
   "item.appleGold.name": "item.minecraft.golden_apple",
-  "item.sign.name": "book.signButton",
+  "item.sign.name": "item.minecraft.sign",
   "item.doorOak.name": "block.minecraft.oak_door",
   "item.doorSpruce.name": "block.minecraft.spruce_door",
   "item.doorBirch.name": "block.minecraft.birch_door",
@@ -976,7 +1018,7 @@
   "item.minecart.name": "item.minecraft.minecart",
   "item.saddle.name": "item.minecraft.saddle",
   "item.doorIron.name": "block.minecraft.iron_door",
-  "item.redstone.name": "itemGroup.redstone",
+  "item.redstone.name": "item.minecraft.redstone",
   "item.snowball.name": "item.minecraft.snowball",
   "item.boat.oak.name": "item.minecraft.oak_boat",
   "item.boat.spruce.name": "item.minecraft.spruce_boat",
@@ -985,8 +1027,10 @@
   "item.boat.acacia.name": "item.minecraft.acacia_boat",
   "item.boat.dark_oak.name": "item.minecraft.dark_oak_boat",
   "item.leather.name": "item.minecraft.leather",
+  "item.milk.name": "item.minecraft.milk_bucket",
   "item.brick.name": "item.minecraft.brick",
   "item.clay.name": "item.minecraft.clay_ball",
+  "item.reeds.name": "block.minecraft.sugar_cane",
   "item.paper.name": "item.minecraft.paper",
   "item.book.name": "item.minecraft.book",
   "item.slimeball.name": "item.minecraft.slime_ball",
@@ -1000,8 +1044,11 @@
   "item.fishingRod.name": "item.minecraft.fishing_rod",
   "item.clock.name": "item.minecraft.clock",
   "item.yellowDust.name": "item.minecraft.glowstone_dust",
+  "item.fish.cod.raw.name": "item.minecraft.cod",
   "item.fish.salmon.raw.name": "item.minecraft.salmon",
   "item.fish.pufferfish.raw.name": "item.minecraft.pufferfish",
+  "item.fish.clownfish.raw.name": "item.minecraft.tropical_fish",
+  "item.fish.cod.cooked.name": "item.minecraft.cooked_cod",
   "item.fish.salmon.cooked.name": "item.minecraft.cooked_salmon",
   "item.record.name": "item.minecraft.music_disc_13",
   "item.record.13.desc": "item.minecraft.music_disc_13.desc",
@@ -1073,6 +1120,7 @@
   "item.cauldron.name": "item.minecraft.cauldron",
   "item.brewingStand.name": "item.minecraft.brewing_stand",
   "item.eyeOfEnder.name": "item.minecraft.ender_eye",
+  "item.speckledMelon.name": "item.minecraft.glistering_melon_slice",
   "item.expBottle.name": "item.minecraft.experience_bottle",
   "item.fireball.name": "item.minecraft.fire_charge",
   "item.writingBook.name": "item.minecraft.writable_book",
@@ -1127,6 +1175,7 @@
   "item.netherquartz.name": "item.minecraft.quartz",
   "item.armorStand.name": "item.minecraft.armor_stand",
   "item.horsearmormetal.name": "item.minecraft.iron_horse_armor",
+  "item.horsearmorgold.name": "item.minecraft.golden_horse_armor",
   "item.horsearmordiamond.name": "item.minecraft.diamond_horse_armor",
   "item.prismarineShard.name": "item.minecraft.prismarine_shard",
   "item.prismarineCrystals.name": "item.minecraft.prismarine_crystals",
@@ -1284,6 +1333,7 @@
   "entity.Rabbit.name": "entity.minecraft.rabbit",
   "entity.KillerBunny.name": "entity.minecraft.killer_bunny",
   "entity.Llama.name": "entity.minecraft.llama",
+  "entity.PrimedTnt.name": "entity.minecraft.tnt",
   "entity.FallingSand.name": "entity.minecraft.falling_block",
   "entity.Minecart.name": "entity.minecraft.minecart",
   "entity.MinecartHopper.name": "entity.minecraft.hopper_minecart",
@@ -2398,6 +2448,7 @@
   "subtitles.entity.blaze.death": null,
   "subtitles.entity.blaze.hurt": null,
   "subtitles.entity.blaze.shoot": null,
+  "subtitles.entity.bobber.splash": "subtitles.entity.fishing_bobber.splash",
   "subtitles.entity.bobber.throw": "subtitles.entity.fishing_bobber.throw",
   "subtitles.entity.cat.ambient": null,
   "subtitles.entity.cat.death": null,
